--- a/sam-app/hello_world/Dockerfile
+++ b/sam-app/hello_world/Dockerfile
@@ -1,8 +1,6 @@
-FROM public.ecr.aws/lambda/python:3.12
-
-COPY app.py requirements.txt ./
-
-RUN python3.12 -m pip install -r requirements.txt -t .
-
-# Command can be overwritten by providing a different command in the template directly.
-CMD ["app.lambda_handler"]
+FROM public.ecr.aws/docker/library/python:3.12.1-slim
+COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.8.1 /lambda-adapter /opt/extensions/lambda-adapter
+WORKDIR /var/task
+COPY ./ .
+RUN python -m pip install -r requirements.txt
+CMD ["gunicorn", "-b=:8080", "-w=1", "app:server"]
